more overflow fixes

--- a/client/src/components/Modal/Modals/AddEditPostModal/AddEditPostModal.module.scss
+++ b/client/src/components/Modal/Modals/AddEditPostModal/AddEditPostModal.module.scss
@@ -22,6 +22,32 @@
     }
 }
 
+.addEditWrapper {
+    max-height: 70vh;
+    display: flex;
+    flex-direction: column;
+}
+
+.fieldWrapper {
+    flex-grow: 1;
+    overflow-y: scroll;
+    &::-webkit-scrollbar {
+        width: 0px; /* Remove scrollbar space */
+        background: transparent; /* Optional: just make scrollbar invisible */
+    }
+}
+
+.addEditInput {
+    width: 100%;
+    max-width: 400px;
+}
+
+.addEditTextarea {
+    width: 100%;
+    max-width: 400px;
+    resize: vertical;
+}
+
 .postWrapper {
     display: flex;
     justify-content: flex-end;
